--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <h1>Fashionista</h1>
             <nav class="menu-items">
-                <a href="#hero">Home</a>
+                <a href="./Homepage2/index.html">Home</a>
                 <a href="#collections">Collections</a>
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a> 
@@ -27,7 +27,7 @@
         </header>
 
         <section class="hero" id="hero">
-            <div class="hero-content">
+            <div class="hero-content" data-aos="fade-left">
                 <h2>Welcome to Fashionista</h2>
                 <h3>Redefining Your Style</h3>
                 <p>Discover the latest trends with our exclusive collections.</p>
