--- a/Homepage2/index.html
+++ b/Homepage2/index.html
@@ -29,17 +29,32 @@
         </nav>
         <div class="hamburger"> &#9776 </div>
     </header>
-    <section class="hero" >
-        <div class="hero-slide"></div>
-        <div class="hero-slide"></div>
-        <div class="hero-slide"></div>
+    <section class="hero">
+  <div class="hero-slide active" style="background-image: url('./asstes/old-youth-GUlEGi2vyvM-unsplash.jpg');">
+    <div class="overlay">
+      <h1>Men's Collection</h1>
+      <p>Style that defines you.</p>
+      <button>Shop Now</button>
+    </div>
+  </div>
 
-        <div class="overlay" id="heroText" >
-            <h1>Men's Collection</h1>
-            <p>Style that defines you.</p>
-            <button>Shop Now</button>
-        </div>
-    </section>
+  <div class="hero-slide" style="background-image: url('./asstes/pawel-szvmanski-DsplkQv2WEM-unsplash.jpg');">
+    <div class="overlay">
+      <h1>Women's Collection</h1>
+      <p>Elegance for every occasion.</p>
+      <button>Shop Now</button>
+    </div>
+  </div>
+
+  <div class="hero-slide" style="background-image: url('./asstes/nathan-dumlao-3-tkQbEAsd8-unsplash.jpg');">
+    <div class="overlay">
+      <h1>Kids' Collection</h1>
+      <p>Fashion for the little ones.</p>
+      <button>Shop Now</button>
+    </div>
+  </div>
+</section>
+
     <section class="categories" >
         <h1>Shop by Categories</h1>
         <div class="cat-grid" data-aos="fade-up">
