--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Fashionista</h1>
+        <img src="./assets/stackly-logo.png" alt="logo" >    
             <nav class="menu-items">
                 <a href="./Homepage2/index.html">Home</a>
                 <a href="#collections">Collections</a>
@@ -42,21 +42,21 @@
                     <img src="./assets/photo-15.jpeg" alt="Men's Collection">
                     <h3>Men's Collection</h3>
                     <p>Explore our premium range of men's wear from casual to formal.</p>
-                    <a href="#" class="btn">Shop Now</a>
+                    <a href="404page.html" class="btn">Shop Now</a>
                 </div>
 
                 <div class="collection-card">
                     <img src="./assets/pexels-taina-bernard-1861666-3571535.jpg" alt="Women's Collection">
                     <h3>Women's Collection</h3>
                     <p>Elegant dresses, stylish outfits, and accessories for every occasion.</p>
-                    <a href="#" class="btn">Shop Now</a>
+                    <a href="404page.html" class="btn">Shop Now</a>
                 </div>
 
                 <div class="collection-card">
                     <img src="./assets/girl-sunglasses-posing-with-shopping-bags.jpg" alt="Kids' Collection">
                     <h3>Kids' Collection</h3>
                     <p>Fun, colorful, and comfortable clothing for the little ones.</p>
-                    <a href="#" class="btn">Shop Now</a>
+                    <a href="404page.html" class="btn">Shop Now</a>
                 </div>
             </div>
         </section>
@@ -79,7 +79,7 @@
                         Whether you're making a statement or embracing everyday glamour, <strong>Fashionista</strong>
                         ensures you shine effortlessly.
                     </p>
-                    <a href="#" class="about-btn">Explore Our Story</a>
+                    <a href="404page.html" class="about-btn">Explore Our Story</a>
                 </div>
             </div>
         </section>
@@ -127,7 +127,7 @@
                         <h3>The Art of Effortless Style</h3>
                         <p>Discover how to create timeless looks with fewer pieces, mastering the art of minimalism
                             while keeping your wardrobe versatile and sophisticated.</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="404page.html" class="read-more">Read More</a>
                     </div>
                 </div>
 
@@ -139,7 +139,7 @@
                         <h3>5 Trends to Watch This Season</h3>
                         <p>From bold prints to muted tones, here's what's making waves in the fashion world this
                             season—and how to style them with confidence.</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="404page.html" class="read-more">Read More</a>
                     </div>
                 </div>
 
@@ -151,7 +151,7 @@
                         <h3>Behind the Seams: Sustainable Fashion</h3>
                         <p>A closer look at how premium fabrics, ethical sourcing, and timeless design come together to
                             create pieces that last a lifetime.</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="404page.html" class="read-more">Read More</a>
                     </div>
                 </div>
 
