--- a/Homepage2/index.html
+++ b/Homepage2/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Fashion2</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -16,9 +16,9 @@
         <header class="header-cls">
             <img src="./asstes/stackly-logo.png">
             <nav class="menu-items">
-                <a href="../index.html">Home</a>
+                 <a href="../index.html">Home</a>
                 <a href="#categories">Shop</a>
-                <a href="404page.html">Products</a>
+                <a href="#accessories">Products</a>
                 <a href="#Offers">Offers</a>
                 <a href="404page.html">Buynow</a>
                 <a class="btn-close">Close</a>
@@ -31,6 +31,7 @@
             </nav>
             <div class="hamburger"> &#9776 </div>
         </header>
+        
         <section class="hero" id="hero">
             <div class="hero-slide active"
                 style="background-image: url('./asstes/pexels-photo-10679232.jpeg');">
@@ -58,6 +59,7 @@
             </div>
         </section>
 
+
         <section class="categories" id="categories">
             <h1>Shop by Categories</h1>
             <div class="cat-grid" data-aos="fade-up">
@@ -79,7 +81,7 @@
                 </div>
             </div>
         </section>
-        <section class="extra-items">
+        <section class="accessories">
             <div class="items-grid">
                 <div class="items-card" data-aos="fade-right">
                     <img src="./asstes/acc-men2.jpg">
