--- a/Homepage2/index.html
+++ b/Homepage2/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </section>
-        <section class="accessories">
+        <section class="accessories" id="accessories">
             <div class="items-grid">
                 <div class="items-card" data-aos="fade-right">
                     <img src="./asstes/acc-men2.jpg">
