--- a/404page.html
+++ b/404page.html
@@ -14,9 +14,9 @@
         <img src="./assets/stackly-logo.png" alt="logo">
         <nav class="menu-items">
             <a href="./Homepage2/index.html">Home</a>
-            <a href="#collections">Collections</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html#collections">Collections</a>
+            <a href="index.html#about">About</a>
+            <a href="index.html#contact">Contact</a>
             <a class="btn-close">Close</a>
         </nav>
 
