--- a/Homepage2/404page.html
+++ b/Homepage2/404page.html
@@ -15,9 +15,9 @@
         <img src="./asstes/stackly-logo.png">
         <nav class="menu-items">
             <a href="#hero">Home</a>
-            <a href="#categories">Shop</a>
-            <a href="404page.html">Products</a>
-            <a href="#Offers">Offers</a>
+            <a href="index.html#categories">Shop</a>
+            <a href="index.html#accessories">Products</a>
+            <a href="index.html#Offers">Offers</a>
             <a href="404page.html">Buynow</a>
             <a class="btn-close">Close</a>
         </nav>
