--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <input type="email" placeholder="Your Email" required>
                         <input type="text" placeholder="Subject">
                         <textarea placeholder="Your Message" rows="5" required></textarea>
-                        <button type="submit">Send Message</button>
+                        <a href="404page.html">Send </a>
                     </form>
 
                     <div class="contact-info">
@@ -212,11 +212,11 @@
                 <div class="footer-social">
                     <h3>Follow Us</h3>
                     <div class="social-icons">
-                        <a href="#"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/facebook-new.png" alt="Facebook" ></a>
-                        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png"
+                        <a href="404page.html"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/facebook-new.png" alt="Facebook" ></a>
+                        <a href="404page.html"><img src="https://cdn-icons-png.flaticon.com/512/733/733558.png"
                                 alt="Instagram"></a>
-                        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
-                        <a href="#"><img width="50" height="50" src="https://img.icons8.com/ios/50/pinterest.png" alt="pinterest"/></a>
+                        <a href="404page.html"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
+                        <a href="404page.html"><img width="50" height="50" src="https://img.icons8.com/ios/50/pinterest.png" alt="pinterest"/></a>
                     </div>
                 </div>
             </div>
