--- a/Homepage2/index.html
+++ b/Homepage2/index.html
@@ -219,7 +219,7 @@
                             <textarea placeholder="Type your Message here...."></textarea>
                         </div>
                         <div>
-                            <button>Send Now</button>
+                            <a href="404page.html">Send Now</a>
                         </div>
                     </form>
                 </div>
@@ -236,10 +236,10 @@
                     <div class="contact-r-social-head">
                         <h2>Follow Us on</h2>
                         <div class="contact-r-social">
-                            <div> <i class="fa-brands fa-instagram"></i></div>
+                            <div><a href="404page.html"><i class="fa-brands fa-instagram"></i></a></div>
 
-                            <div><i class="fa-brands fa-facebook"></i></div>
-                            <div><i class="fa-brands fa-pinterest"></i></div>
+                            <div><a href="404page.html"><i class="fa-brands fa-facebook"></i></a></div>
+                            <div><a href="404page.html"><i class="fa-brands fa-pinterest"></i></a></div>
                         </div>
                     </div>
 
@@ -259,22 +259,22 @@
                         <nav class="footer-nav-grid">
                            <a href="../index.html">Home</a>
                 <a href="#categories">Shop</a>
-                <a href="404page.html">Products</a>
+                <a href="#accessories">Products</a>
                 <a href="#Offers">Offers</a>
                 <a href="404page.html">Buynow</a>
                         </nav>
                     </div>
                     <div class="footer-content-contact">
                         <h3>Contact US</h3>
-                        <a href="">
+                        <a href="404page.html">
                             <i class="fa-solid fa-location-dot"></i>
                             <p>TN Salem</p>
                         </a>
-                        <a href="">
+                        <a href="404page.html">
                             <i class="fa-solid fa-phone"></i>
                             <p>9342575839</p>
                         </a>
-                        <a href="">
+                        <a href="404page.html">
                             <i class="fa-solid fa-at"></i>
                             <p>info@gmail.com</p>
                         </a>
@@ -282,9 +282,9 @@
                     <div class="footer-content-legal-link">
                         <h3>Legal Link</h3>
                         <nav>
-                            <li>Privacy Policy</li>
-                            <li>Terms & Conditons</li>
-                            <li>Disclimer</li>
+                            <li><a href="404page.html">Policy</a> </li>
+                            <li><a href="404page.html">Terms & Conditons</a></li>
+                            <li><a href="404page.html">Disclimer</a></li>
                         </nav>
                     </div>
                 </div>
