--- a/login.html
+++ b/login.html
@@ -30,15 +30,16 @@
 
         .login-details input {
             padding: 12px;
+            border-radius: 8%
         }
 
         .login-details button {
             padding: 16px 24px;
-            width: 50%;
-            border-radius: 20%;
+            width: 30%;
+            border-radius: 10%;
             border-color: rgba(240, 248, 255, 0);
             background-color: cadetblue;
-            color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
             cursor: pointer;
         }
 
