--- a/Homepage2/index.html
+++ b/Homepage2/index.html
@@ -17,9 +17,9 @@
             <img src="./asstes/stackly-logo.png">
             <nav class="menu-items">
                  <a href="../index.html">Home</a>
-                <a href="#categories">Shop</a>
-                <a href="#accessories">Products</a>
-                <a href="#Offers">Offers</a>
+                <a href="404page.html">Shop</a>
+                <a href="404page.html">Products</a>
+                <a href="404page.html">Offers</a>
                 <a href="404page.html">Buynow</a>
                 <a class="btn-close">Close</a>
             </nav>
@@ -258,9 +258,9 @@
                         <h3>Quick Links</h3>
                         <nav class="footer-nav-grid">
                            <a href="../index.html">Home</a>
-                <a href="#categories">Shop</a>
-                <a href="#accessories">Products</a>
-                <a href="#Offers">Offers</a>
+                <a href="404page.html">Shop</a>
+                <a href="404page.html">Products</a>
+                <a href="404page.html">Offers</a>
                 <a href="404page.html">Buynow</a>
                         </nav>
                     </div>
