--- a/login.html
+++ b/login.html
@@ -30,8 +30,15 @@
 
         .login-details input {
             padding: 12px;
-            border-radius: 8%
+            /* border-radius: 8%; */
+              border: 2px solid #474e55;
+      border-radius: 25px; 
+      
         }
+       .login-details input:focus {
+      border-color: #2ecc71;  
+      box-shadow: 0 0 8px rgba(46, 204, 113, 0.5);
+    }
 
         .login-details button {
             padding: 16px 24px;
