--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <img src="./assets/stackly-logo.png" alt="logo" >    
             <nav class="menu-items">
                 <a href="./Homepage2/index.html">Home</a>
-                <a href="#collections">Collections</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a> 
+                <a href="404page.html">Collections</a>
+                <a href="404page.html">About</a>
+                <a href="404page.html">Contact</a> 
+                
                 <a class="btn-close">Close</a>
              </nav>
      
@@ -195,10 +196,10 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="#hero">Home</a></li>
-                        <li><a href="#collections">Collections</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#blog">Blog</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="404page.html">Collections</a></li>
+                        <li><a href="404page.html">About Us</a></li>
+                        <li><a href="404page.html">Blog</a></li>
+                        <li><a href="404page.html">Contact</a></li>
                     </ul>
                 </div>
 
