--- a/Homepage2/index.html
+++ b/Homepage2/index.html
@@ -24,10 +24,10 @@
                 <a class="btn-close">Close</a>
             </nav>
             <nav class="menu-icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-circle-user"></i>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="404page.html"><i class="fa-solid fa-magnifying-glass"></i></a></i>
+                <a href="404page.html"><i class="fa-solid fa-circle-user"></i></a>
+                <a href="404page.html"><i class="fa-regular fa-heart"></i></a>
+                <a href="404page.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </nav>
             <div class="hamburger"> &#9776 </div>
         </header>
@@ -111,17 +111,25 @@
             </div>
         </section>
         <section class="sponsor">
-            <div class="sponsor-content">
-                <div class="sponsor-grid">
-                    <img src="./asstes/Fashion-Logo-PNG-Image-HD.png" alt="">
-                    <img src="./asstes/logo-fashion-show-model-fashion.png" alt="">
-                    <img src="./asstes/sponser.webp" alt="">
-                    <img src="./asstes/sponser-fas.webp" alt="">
-                    <img src="./asstes/sponser-ottawa.webp" alt="">
-                    <img src="./asstes/sponser-generic-black-sleeve-hd-png-download.png" alt="">
-                </div>
-            </div>
-        </section>
+  <div class="sponsor-content">
+    <div class="sponsor-grid">
+      <img src="./asstes/Fashion-Logo-PNG-Image-HD.png" alt="">
+      <img src="./asstes/logo-fashion-show-model-fashion.png" alt="">
+      <img src="./asstes/sponser.webp" alt="">
+      <img src="./asstes/sponser-fas.webp" alt="">
+      <img src="./asstes/sponser-ottawa.webp" alt="">
+      <img src="./asstes/sponser-generic-black-sleeve-hd-png-download.png" alt="">
+      <!-- Duplicate for smooth loop -->
+      <img src="./asstes/Fashion-Logo-PNG-Image-HD.png" alt="">
+      <img src="./asstes/logo-fashion-show-model-fashion.png" alt="">
+      <img src="./asstes/sponser.webp" alt="">
+      <img src="./asstes/sponser-fas.webp" alt="">
+      <img src="./asstes/sponser-ottawa.webp" alt="">
+      <img src="./asstes/sponser-generic-black-sleeve-hd-png-download.png" alt="">
+    </div>
+  </div>
+</section>
+
         <section class="testimonials" data-aos="zoom-in-left" id="testimonials">
             <div class="testimonial-content">
                 <h1>What our Client Say About US</h1>
