--- a/about.html
+++ b/about.html
@@ -640,12 +640,11 @@
     <header class="header-cls">
         <img src="./assets/stackly-logo.png" alt="logo">
         <nav class="menu-items">
-            <a href="./Homepage2/index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="404page.html">Collections</a>
             <a href="404page.html">Contact</a>
-            <button class="popup-trigger-btn" id="show-popup-btn">Login / Signup</button>
-
+ 
             <a class="btn-close">Close</a>
         </nav>
 
@@ -660,7 +659,7 @@
             <div class="about-us-nav">
                 <h1>About US</h1>
                 <div>
-                    <a href="index.html" class="home-nav">Home</a>/<a href="about.html" class="about-nav">About</a>
+                    <a href="index.html" class="home-nav">Home</a>/<a   class="about-nav">About</a>
                 </div>
             </div>
             <div class="about-heading">
@@ -812,7 +811,7 @@
                     <ul>
                         <li><a href="#hero">Home</a></li>
                         <li><a href="404page.html">Collections</a></li>
-                        <li><a href="404page.html">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="404page.html">Blog</a></li>
                         <li><a href="404page.html">Contact</a></li>
                     </ul>
