--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <ul>
                     <li><a href="#hero">Home</a></li>
                     <li><a href="404page.html">Collections</a></li>
-                    <li><a href="404page.html">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="404page.html">Blog</a></li>
                     <li><a href="404page.html">Contact</a></li>
                 </ul>
