--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <nav class="menu-items">
             <a href="./Homepage2/index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="services.html">Services</a>
             <a href="404page.html">Collections</a>
             <a href="404page.html">Contact</a>
             <button class="popup-trigger-btn" id="show-popup-btn">Login / Signup</button>
@@ -202,9 +203,10 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#hero">Home</a></li>
-                    <li><a href="404page.html">Collections</a></li>
                     <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html"> Services</a></li>
                     <li><a href="404page.html">Blog</a></li>
+                    <li><a href="404page.html">Collections</a></li>
                     <li><a href="404page.html">Contact</a></li>
                 </ul>
             </div>
@@ -419,7 +421,7 @@
                 }
             });
             if (isFormValid) {
-                 window.location.href = '404page.html';
+                window.location.href = '404page.html';
             }
         };
 
