--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
        
          .about-us {
             position: relative;
-
         }
 
         .about-heading {
@@ -668,6 +667,10 @@ cursor: pointer;
         .team-content img:hover{
   transform: scale(1.05);
         }
+        .team-container h1{
+            margin-left: 7%;
+        }
+
     </style>
 
     <header class="header-cls">
