--- a/services.html
+++ b/services.html
@@ -211,8 +211,8 @@
         .work-service h2 {
             text-align: center;
             color: #004db1;
-            margin: 2%;
-        }
+    margin: 5%;
+    font-size: xxx-large;        }
 
         .workflow {
             display: flex;
