--- a/services.html
+++ b/services.html
@@ -900,7 +900,7 @@
                             <input type="email" placeholder="Email">
                             <input type="tel" placeholder="Mobile Number" maxlength="10">
                             <textarea placeholder="Message"></textarea>
-                            <button onclick="window.location.href = 'index.html'">Submit</button>
+                            <button onclick="window.location.href = '404page.html'">Submit</button>
                         </div>
                     </div>
                 </div>
