--- a/services.html
+++ b/services.html
@@ -916,7 +916,7 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#hero">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="404page.html">Collections</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
